@@ -1,1 +1,4 @@
 1. collect more information about the sampler to R 
+2. plot with information about model and 
+   legend for Rhat 
+3. cache compiled objects 
